parser.output
State 142 conflicts: 1 shift/reduce
State 143 conflicts: 1 shift/reduce
State 144 conflicts: 1 shift/reduce


Grammar

    0 $accept: function $end

    1 function: function_header variables body

    2 function_header: FUNCTION IDENTIFIER parameters RETURNS type ';'

    3 type: INTEGER
    4     | REAL
    5     | CHARACTER

    6 variables: variables variable
    7          | ε

    8 variable: IDENTIFIER ':' type IS statement ';'
    9         | IDENTIFIER ':' LIST OF type IS list ';'

   10 parameters: parameters var
   11           | parameters ',' var
   12           | ε

   13 var: IDENTIFIER ':' type

   14 direction: LEFT
   15          | RIGHT

   16 operator: ADDOP
   17         | MULOP
   18         | MODOP
   19         | EXPOP
   20         | NEGOP
   21         | ANDOP
   22         | OROP
   23         | NOTOP

   24 list_choice: list
   25            | IDENTIFIER

   26 list: '(' expressions ')'

   27 expressions: expressions ',' expression
   28            | expression

   29 body: BEGIN_ statement_ END ';'

   30 statement_: statement ';'
   31           | error ';'

   32 statement: expression
   33          | WHEN condition ',' expression ':' expression
   34          | SWITCH expression IS cases OTHERS ARROW statement ';' ENDSWITCH
   35          | IF condition THEN statement ';' elsifs ELSE statement ';' ENDIF
   36          | FOLD direction operator list_choice ENDFOLD

   37 cases: cases case
   38      | ε

   39 case: CASE INT_LITERAL ARROW statement ';'
   40     | CASE REAL_LITERAL ARROW statement ';'

   41 elsifs: elsifs elsif
   42       | ε

   43 elsif: ELSIF condition THEN INT_LITERAL ';'
   44      | ELSIF condition THEN CHAR_LITERAL ';'
   45      | ELSIF condition THEN REAL_LITERAL ';'
   46      | ELSIF condition THEN expression ';'

   47 condition: condition ANDOP NOTOP relation
   48          | condition ANDOP relation
   49          | condition OROP relation
   50          | relation

   51 relation: '(' condition ')'
   52         | expression RELOP expression

   53 expression: expression ADDOP term
   54           | term

   55 term: NEGOP primary
   56     | term MODOP primary
   57     | term MULOP primary
   58     | term EXPOP primary
   59     | primary

   60 primary: '(' expression ')'
   61        | INT_LITERAL
   62        | REAL_LITERAL
   63        | HEX_LITERAL
   64        | CHAR_LITERAL
   65        | IDENTIFIER '(' expression ')'
   66        | IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 26 51 60 65
    ')' (41) 26 51 60 65
    ',' (44) 11 27 33
    ':' (58) 8 9 13 33
    ';' (59) 2 8 9 29 30 31 34 35 39 40 43 44 45 46
    error (256) 31
    IDENTIFIER (258) 2 8 9 13 25 65 66
    INT_LITERAL (259) 39 43 61
    REAL_LITERAL (260) 40 45 62
    CHAR_LITERAL (261) 44 64
    HEX_LITERAL (262) 63
    ADDOP (263) 16 53
    MULOP (264) 17 57
    ANDOP (265) 21 47 48
    RELOP (266) 52
    ARROW (267) 34 39 40
    BEGIN_ (268) 29
    CASE (269) 39 40
    CHARACTER (270) 5
    ELSE (271) 35
    END (272) 29
    ENDSWITCH (273) 34
    FUNCTION (274) 2
    INTEGER (275) 3
    REAL (276) 4
    IS (277) 8 9 34
    LIST (278) 9
    OF (279) 9
    OTHERS (280) 34
    RETURNS (281) 2
    SWITCH (282) 34
    WHEN (283) 33
    IF (284) 35
    THEN (285) 35 43 44 45 46
    ELSIF (286) 43 44 45 46
    ENDIF (287) 35
    FOLD (288) 36
    ENDFOLD (289) 36
    LEFT (290) 14
    RIGHT (291) 15
    MODOP (292) 18 56
    EXPOP (293) 19 58
    NEGOP (294) 20 55
    OROP (295) 22 49
    NOTOP (296) 23 47


Nonterminals, with rules where they appear

    $accept (47)
        on left: 0
    function (48)
        on left: 1
        on right: 0
    function_header (49)
        on left: 2
        on right: 1
    type (50)
        on left: 3 4 5
        on right: 2 8 9 13
    variables (51)
        on left: 6 7
        on right: 1 6
    variable (52)
        on left: 8 9
        on right: 6
    parameters (53)
        on left: 10 11 12
        on right: 2 10 11
    var (54)
        on left: 13
        on right: 10 11
    direction (55)
        on left: 14 15
        on right: 36
    operator (56)
        on left: 16 17 18 19 20 21 22 23
        on right: 36
    list_choice (57)
        on left: 24 25
        on right: 36
    list (58)
        on left: 26
        on right: 9 24
    expressions (59)
        on left: 27 28
        on right: 26 27
    body (60)
        on left: 29
        on right: 1
    statement_ (61)
        on left: 30 31
        on right: 29
    statement (62)
        on left: 32 33 34 35 36
        on right: 8 30 34 35 39 40
    cases (63)
        on left: 37 38
        on right: 34 37
    case (64)
        on left: 39 40
        on right: 37
    elsifs (65)
        on left: 41 42
        on right: 35 41
    elsif (66)
        on left: 43 44 45 46
        on right: 41
    condition (67)
        on left: 47 48 49 50
        on right: 33 35 43 44 45 46 47 48 49 51
    relation (68)
        on left: 51 52
        on right: 47 48 49 50
    expression (69)
        on left: 53 54
        on right: 27 28 32 33 34 46 52 53 60 65
    term (70)
        on left: 55 56 57 58 59
        on right: 53 54 56 57 58
    primary (71)
        on left: 60 61 62 63 64 65 66
        on right: 55 56 57 58 59


State 0

    0 $accept: • function $end

    FUNCTION  shift, and go to state 1

    function         go to state 2
    function_header  go to state 3


State 1

    2 function_header: FUNCTION • IDENTIFIER parameters RETURNS type ';'

    IDENTIFIER  shift, and go to state 4


State 2

    0 $accept: function • $end

    $end  shift, and go to state 5


State 3

    1 function: function_header • variables body

    $default  reduce using rule 7 (variables)

    variables  go to state 6


State 4

    2 function_header: FUNCTION IDENTIFIER • parameters RETURNS type ';'

    $default  reduce using rule 12 (parameters)

    parameters  go to state 7


State 5

    0 $accept: function $end •

    $default  accept


State 6

    1 function: function_header variables • body
    6 variables: variables • variable

    IDENTIFIER  shift, and go to state 8
    BEGIN_      shift, and go to state 9

    variable  go to state 10
    body      go to state 11


State 7

    2 function_header: FUNCTION IDENTIFIER parameters • RETURNS type ';'
   10 parameters: parameters • var
   11           | parameters • ',' var

    IDENTIFIER  shift, and go to state 12
    RETURNS     shift, and go to state 13
    ','         shift, and go to state 14

    var  go to state 15


State 8

    8 variable: IDENTIFIER • ':' type IS statement ';'
    9         | IDENTIFIER • ':' LIST OF type IS list ';'

    ':'  shift, and go to state 16


State 9

   29 body: BEGIN_ • statement_ END ';'

    error         shift, and go to state 17
    IDENTIFIER    shift, and go to state 18
    INT_LITERAL   shift, and go to state 19
    REAL_LITERAL  shift, and go to state 20
    CHAR_LITERAL  shift, and go to state 21
    HEX_LITERAL   shift, and go to state 22
    SWITCH        shift, and go to state 23
    WHEN          shift, and go to state 24
    IF            shift, and go to state 25
    FOLD          shift, and go to state 26
    NEGOP         shift, and go to state 27
    '('           shift, and go to state 28

    statement_  go to state 29
    statement   go to state 30
    expression  go to state 31
    term        go to state 32
    primary     go to state 33


State 10

    6 variables: variables variable •

    $default  reduce using rule 6 (variables)


State 11

    1 function: function_header variables body •

    $default  reduce using rule 1 (function)


State 12

   13 var: IDENTIFIER • ':' type

    ':'  shift, and go to state 34


State 13

    2 function_header: FUNCTION IDENTIFIER parameters RETURNS • type ';'

    CHARACTER  shift, and go to state 35
    INTEGER    shift, and go to state 36
    REAL       shift, and go to state 37

    type  go to state 38


State 14

   11 parameters: parameters ',' • var

    IDENTIFIER  shift, and go to state 12

    var  go to state 39


State 15

   10 parameters: parameters var •

    $default  reduce using rule 10 (parameters)


State 16

    8 variable: IDENTIFIER ':' • type IS statement ';'
    9         | IDENTIFIER ':' • LIST OF type IS list ';'

    CHARACTER  shift, and go to state 35
    INTEGER    shift, and go to state 36
    REAL       shift, and go to state 37
    LIST       shift, and go to state 40

    type  go to state 41


State 17

   31 statement_: error • ';'

    ';'  shift, and go to state 42


State 18

   65 primary: IDENTIFIER • '(' expression ')'
   66        | IDENTIFIER •

    '('  shift, and go to state 43

    $default  reduce using rule 66 (primary)


State 19

   61 primary: INT_LITERAL •

    $default  reduce using rule 61 (primary)


State 20

   62 primary: REAL_LITERAL •

    $default  reduce using rule 62 (primary)


State 21

   64 primary: CHAR_LITERAL •

    $default  reduce using rule 64 (primary)


State 22

   63 primary: HEX_LITERAL •

    $default  reduce using rule 63 (primary)


State 23

   34 statement: SWITCH • expression IS cases OTHERS ARROW statement ';' ENDSWITCH

    IDENTIFIER    shift, and go to state 18
    INT_LITERAL   shift, and go to state 19
    REAL_LITERAL  shift, and go to state 20
    CHAR_LITERAL  shift, and go to state 21
    HEX_LITERAL   shift, and go to state 22
    NEGOP         shift, and go to state 27
    '('           shift, and go to state 28

    expression  go to state 44
    term        go to state 32
    primary     go to state 33


State 24

   33 statement: WHEN • condition ',' expression ':' expression

    IDENTIFIER    shift, and go to state 18
    INT_LITERAL   shift, and go to state 19
    REAL_LITERAL  shift, and go to state 20
    CHAR_LITERAL  shift, and go to state 21
    HEX_LITERAL   shift, and go to state 22
    NEGOP         shift, and go to state 27
    '('           shift, and go to state 45

    condition   go to state 46
    relation    go to state 47
    expression  go to state 48
    term        go to state 32
    primary     go to state 33


State 25

   35 statement: IF • condition THEN statement ';' elsifs ELSE statement ';' ENDIF

    IDENTIFIER    shift, and go to state 18
    INT_LITERAL   shift, and go to state 19
    REAL_LITERAL  shift, and go to state 20
    CHAR_LITERAL  shift, and go to state 21
    HEX_LITERAL   shift, and go to state 22
    NEGOP         shift, and go to state 27
    '('           shift, and go to state 45

    condition   go to state 49
    relation    go to state 47
    expression  go to state 48
    term        go to state 32
    primary     go to state 33


State 26

   36 statement: FOLD • direction operator list_choice ENDFOLD

    LEFT   shift, and go to state 50
    RIGHT  shift, and go to state 51

    direction  go to state 52


State 27

   55 term: NEGOP • primary

    IDENTIFIER    shift, and go to state 18
    INT_LITERAL   shift, and go to state 19
    REAL_LITERAL  shift, and go to state 20
    CHAR_LITERAL  shift, and go to state 21
    HEX_LITERAL   shift, and go to state 22
    '('           shift, and go to state 28

    primary  go to state 53


State 28

   60 primary: '(' • expression ')'

    IDENTIFIER    shift, and go to state 18
    INT_LITERAL   shift, and go to state 19
    REAL_LITERAL  shift, and go to state 20
    CHAR_LITERAL  shift, and go to state 21
    HEX_LITERAL   shift, and go to state 22
    NEGOP         shift, and go to state 27
    '('           shift, and go to state 28

    expression  go to state 54
    term        go to state 32
    primary     go to state 33


State 29

   29 body: BEGIN_ statement_ • END ';'

    END  shift, and go to state 55


State 30

   30 statement_: statement • ';'

    ';'  shift, and go to state 56


State 31

   32 statement: expression •
   53 expression: expression • ADDOP term

    ADDOP  shift, and go to state 57

    $default  reduce using rule 32 (statement)


State 32

   54 expression: term •
   56 term: term • MODOP primary
   57     | term • MULOP primary
   58     | term • EXPOP primary

    MULOP  shift, and go to state 58
    MODOP  shift, and go to state 59
    EXPOP  shift, and go to state 60

    $default  reduce using rule 54 (expression)


State 33

   59 term: primary •

    $default  reduce using rule 59 (term)


State 34

   13 var: IDENTIFIER ':' • type

    CHARACTER  shift, and go to state 35
    INTEGER    shift, and go to state 36
    REAL       shift, and go to state 37

    type  go to state 61


State 35

    5 type: CHARACTER •

    $default  reduce using rule 5 (type)


State 36

    3 type: INTEGER •

    $default  reduce using rule 3 (type)


State 37

    4 type: REAL •

    $default  reduce using rule 4 (type)


State 38

    2 function_header: FUNCTION IDENTIFIER parameters RETURNS type • ';'

    ';'  shift, and go to state 62


State 39

   11 parameters: parameters ',' var •

    $default  reduce using rule 11 (parameters)


State 40

    9 variable: IDENTIFIER ':' LIST • OF type IS list ';'

    OF  shift, and go to state 63


State 41

    8 variable: IDENTIFIER ':' type • IS statement ';'

    IS  shift, and go to state 64


State 42

   31 statement_: error ';' •

    $default  reduce using rule 31 (statement_)


State 43

   65 primary: IDENTIFIER '(' • expression ')'

    IDENTIFIER    shift, and go to state 18
    INT_LITERAL   shift, and go to state 19
    REAL_LITERAL  shift, and go to state 20
    CHAR_LITERAL  shift, and go to state 21
    HEX_LITERAL   shift, and go to state 22
    NEGOP         shift, and go to state 27
    '('           shift, and go to state 28

    expression  go to state 65
    term        go to state 32
    primary     go to state 33


State 44

   34 statement: SWITCH expression • IS cases OTHERS ARROW statement ';' ENDSWITCH
   53 expression: expression • ADDOP term

    ADDOP  shift, and go to state 57
    IS     shift, and go to state 66


State 45

   51 relation: '(' • condition ')'
   60 primary: '(' • expression ')'

    IDENTIFIER    shift, and go to state 18
    INT_LITERAL   shift, and go to state 19
    REAL_LITERAL  shift, and go to state 20
    CHAR_LITERAL  shift, and go to state 21
    HEX_LITERAL   shift, and go to state 22
    NEGOP         shift, and go to state 27
    '('           shift, and go to state 45

    condition   go to state 67
    relation    go to state 47
    expression  go to state 68
    term        go to state 32
    primary     go to state 33


State 46

   33 statement: WHEN condition • ',' expression ':' expression
   47 condition: condition • ANDOP NOTOP relation
   48          | condition • ANDOP relation
   49          | condition • OROP relation

    ANDOP  shift, and go to state 69
    OROP   shift, and go to state 70
    ','    shift, and go to state 71


State 47

   50 condition: relation •

    $default  reduce using rule 50 (condition)


State 48

   52 relation: expression • RELOP expression
   53 expression: expression • ADDOP term

    ADDOP  shift, and go to state 57
    RELOP  shift, and go to state 72


State 49

   35 statement: IF condition • THEN statement ';' elsifs ELSE statement ';' ENDIF
   47 condition: condition • ANDOP NOTOP relation
   48          | condition • ANDOP relation
   49          | condition • OROP relation

    ANDOP  shift, and go to state 69
    THEN   shift, and go to state 73
    OROP   shift, and go to state 70


State 50

   14 direction: LEFT •

    $default  reduce using rule 14 (direction)


State 51

   15 direction: RIGHT •

    $default  reduce using rule 15 (direction)


State 52

   36 statement: FOLD direction • operator list_choice ENDFOLD

    ADDOP  shift, and go to state 74
    MULOP  shift, and go to state 75
    ANDOP  shift, and go to state 76
    MODOP  shift, and go to state 77
    EXPOP  shift, and go to state 78
    NEGOP  shift, and go to state 79
    OROP   shift, and go to state 80
    NOTOP  shift, and go to state 81

    operator  go to state 82


State 53

   55 term: NEGOP primary •

    $default  reduce using rule 55 (term)


State 54

   53 expression: expression • ADDOP term
   60 primary: '(' expression • ')'

    ADDOP  shift, and go to state 57
    ')'    shift, and go to state 83


State 55

   29 body: BEGIN_ statement_ END • ';'

    ';'  shift, and go to state 84


State 56

   30 statement_: statement ';' •

    $default  reduce using rule 30 (statement_)


State 57

   53 expression: expression ADDOP • term

    IDENTIFIER    shift, and go to state 18
    INT_LITERAL   shift, and go to state 19
    REAL_LITERAL  shift, and go to state 20
    CHAR_LITERAL  shift, and go to state 21
    HEX_LITERAL   shift, and go to state 22
    NEGOP         shift, and go to state 27
    '('           shift, and go to state 28

    term     go to state 85
    primary  go to state 33


State 58

   57 term: term MULOP • primary

    IDENTIFIER    shift, and go to state 18
    INT_LITERAL   shift, and go to state 19
    REAL_LITERAL  shift, and go to state 20
    CHAR_LITERAL  shift, and go to state 21
    HEX_LITERAL   shift, and go to state 22
    '('           shift, and go to state 28

    primary  go to state 86


State 59

   56 term: term MODOP • primary

    IDENTIFIER    shift, and go to state 18
    INT_LITERAL   shift, and go to state 19
    REAL_LITERAL  shift, and go to state 20
    CHAR_LITERAL  shift, and go to state 21
    HEX_LITERAL   shift, and go to state 22
    '('           shift, and go to state 28

    primary  go to state 87


State 60

   58 term: term EXPOP • primary

    IDENTIFIER    shift, and go to state 18
    INT_LITERAL   shift, and go to state 19
    REAL_LITERAL  shift, and go to state 20
    CHAR_LITERAL  shift, and go to state 21
    HEX_LITERAL   shift, and go to state 22
    '('           shift, and go to state 28

    primary  go to state 88


State 61

   13 var: IDENTIFIER ':' type •

    $default  reduce using rule 13 (var)


State 62

    2 function_header: FUNCTION IDENTIFIER parameters RETURNS type ';' •

    $default  reduce using rule 2 (function_header)


State 63

    9 variable: IDENTIFIER ':' LIST OF • type IS list ';'

    CHARACTER  shift, and go to state 35
    INTEGER    shift, and go to state 36
    REAL       shift, and go to state 37

    type  go to state 89


State 64

    8 variable: IDENTIFIER ':' type IS • statement ';'

    IDENTIFIER    shift, and go to state 18
    INT_LITERAL   shift, and go to state 19
    REAL_LITERAL  shift, and go to state 20
    CHAR_LITERAL  shift, and go to state 21
    HEX_LITERAL   shift, and go to state 22
    SWITCH        shift, and go to state 23
    WHEN          shift, and go to state 24
    IF            shift, and go to state 25
    FOLD          shift, and go to state 26
    NEGOP         shift, and go to state 27
    '('           shift, and go to state 28

    statement   go to state 90
    expression  go to state 31
    term        go to state 32
    primary     go to state 33


State 65

   53 expression: expression • ADDOP term
   65 primary: IDENTIFIER '(' expression • ')'

    ADDOP  shift, and go to state 57
    ')'    shift, and go to state 91


State 66

   34 statement: SWITCH expression IS • cases OTHERS ARROW statement ';' ENDSWITCH

    $default  reduce using rule 38 (cases)

    cases  go to state 92


State 67

   47 condition: condition • ANDOP NOTOP relation
   48          | condition • ANDOP relation
   49          | condition • OROP relation
   51 relation: '(' condition • ')'

    ANDOP  shift, and go to state 69
    OROP   shift, and go to state 70
    ')'    shift, and go to state 93


State 68

   52 relation: expression • RELOP expression
   53 expression: expression • ADDOP term
   60 primary: '(' expression • ')'

    ADDOP  shift, and go to state 57
    RELOP  shift, and go to state 72
    ')'    shift, and go to state 83


State 69

   47 condition: condition ANDOP • NOTOP relation
   48          | condition ANDOP • relation

    IDENTIFIER    shift, and go to state 18
    INT_LITERAL   shift, and go to state 19
    REAL_LITERAL  shift, and go to state 20
    CHAR_LITERAL  shift, and go to state 21
    HEX_LITERAL   shift, and go to state 22
    NEGOP         shift, and go to state 27
    NOTOP         shift, and go to state 94
    '('           shift, and go to state 45

    relation    go to state 95
    expression  go to state 48
    term        go to state 32
    primary     go to state 33


State 70

   49 condition: condition OROP • relation

    IDENTIFIER    shift, and go to state 18
    INT_LITERAL   shift, and go to state 19
    REAL_LITERAL  shift, and go to state 20
    CHAR_LITERAL  shift, and go to state 21
    HEX_LITERAL   shift, and go to state 22
    NEGOP         shift, and go to state 27
    '('           shift, and go to state 45

    relation    go to state 96
    expression  go to state 48
    term        go to state 32
    primary     go to state 33


State 71

   33 statement: WHEN condition ',' • expression ':' expression

    IDENTIFIER    shift, and go to state 18
    INT_LITERAL   shift, and go to state 19
    REAL_LITERAL  shift, and go to state 20
    CHAR_LITERAL  shift, and go to state 21
    HEX_LITERAL   shift, and go to state 22
    NEGOP         shift, and go to state 27
    '('           shift, and go to state 28

    expression  go to state 97
    term        go to state 32
    primary     go to state 33


State 72

   52 relation: expression RELOP • expression

    IDENTIFIER    shift, and go to state 18
    INT_LITERAL   shift, and go to state 19
    REAL_LITERAL  shift, and go to state 20
    CHAR_LITERAL  shift, and go to state 21
    HEX_LITERAL   shift, and go to state 22
    NEGOP         shift, and go to state 27
    '('           shift, and go to state 28

    expression  go to state 98
    term        go to state 32
    primary     go to state 33


State 73

   35 statement: IF condition THEN • statement ';' elsifs ELSE statement ';' ENDIF

    IDENTIFIER    shift, and go to state 18
    INT_LITERAL   shift, and go to state 19
    REAL_LITERAL  shift, and go to state 20
    CHAR_LITERAL  shift, and go to state 21
    HEX_LITERAL   shift, and go to state 22
    SWITCH        shift, and go to state 23
    WHEN          shift, and go to state 24
    IF            shift, and go to state 25
    FOLD          shift, and go to state 26
    NEGOP         shift, and go to state 27
    '('           shift, and go to state 28

    statement   go to state 99
    expression  go to state 31
    term        go to state 32
    primary     go to state 33


State 74

   16 operator: ADDOP •

    $default  reduce using rule 16 (operator)


State 75

   17 operator: MULOP •

    $default  reduce using rule 17 (operator)


State 76

   21 operator: ANDOP •

    $default  reduce using rule 21 (operator)


State 77

   18 operator: MODOP •

    $default  reduce using rule 18 (operator)


State 78

   19 operator: EXPOP •

    $default  reduce using rule 19 (operator)


State 79

   20 operator: NEGOP •

    $default  reduce using rule 20 (operator)


State 80

   22 operator: OROP •

    $default  reduce using rule 22 (operator)


State 81

   23 operator: NOTOP •

    $default  reduce using rule 23 (operator)


State 82

   36 statement: FOLD direction operator • list_choice ENDFOLD

    IDENTIFIER  shift, and go to state 100
    '('         shift, and go to state 101

    list_choice  go to state 102
    list         go to state 103


State 83

   60 primary: '(' expression ')' •

    $default  reduce using rule 60 (primary)


State 84

   29 body: BEGIN_ statement_ END ';' •

    $default  reduce using rule 29 (body)


State 85

   53 expression: expression ADDOP term •
   56 term: term • MODOP primary
   57     | term • MULOP primary
   58     | term • EXPOP primary

    MULOP  shift, and go to state 58
    MODOP  shift, and go to state 59
    EXPOP  shift, and go to state 60

    $default  reduce using rule 53 (expression)


State 86

   57 term: term MULOP primary •

    $default  reduce using rule 57 (term)


State 87

   56 term: term MODOP primary •

    $default  reduce using rule 56 (term)


State 88

   58 term: term EXPOP primary •

    $default  reduce using rule 58 (term)


State 89

    9 variable: IDENTIFIER ':' LIST OF type • IS list ';'

    IS  shift, and go to state 104


State 90

    8 variable: IDENTIFIER ':' type IS statement • ';'

    ';'  shift, and go to state 105


State 91

   65 primary: IDENTIFIER '(' expression ')' •

    $default  reduce using rule 65 (primary)


State 92

   34 statement: SWITCH expression IS cases • OTHERS ARROW statement ';' ENDSWITCH
   37 cases: cases • case

    CASE    shift, and go to state 106
    OTHERS  shift, and go to state 107

    case  go to state 108


State 93

   51 relation: '(' condition ')' •

    $default  reduce using rule 51 (relation)


State 94

   47 condition: condition ANDOP NOTOP • relation

    IDENTIFIER    shift, and go to state 18
    INT_LITERAL   shift, and go to state 19
    REAL_LITERAL  shift, and go to state 20
    CHAR_LITERAL  shift, and go to state 21
    HEX_LITERAL   shift, and go to state 22
    NEGOP         shift, and go to state 27
    '('           shift, and go to state 45

    relation    go to state 109
    expression  go to state 48
    term        go to state 32
    primary     go to state 33


State 95

   48 condition: condition ANDOP relation •

    $default  reduce using rule 48 (condition)


State 96

   49 condition: condition OROP relation •

    $default  reduce using rule 49 (condition)


State 97

   33 statement: WHEN condition ',' expression • ':' expression
   53 expression: expression • ADDOP term

    ADDOP  shift, and go to state 57
    ':'    shift, and go to state 110


State 98

   52 relation: expression RELOP expression •
   53 expression: expression • ADDOP term

    ADDOP  shift, and go to state 57

    $default  reduce using rule 52 (relation)


State 99

   35 statement: IF condition THEN statement • ';' elsifs ELSE statement ';' ENDIF

    ';'  shift, and go to state 111


State 100

   25 list_choice: IDENTIFIER •

    $default  reduce using rule 25 (list_choice)


State 101

   26 list: '(' • expressions ')'

    IDENTIFIER    shift, and go to state 18
    INT_LITERAL   shift, and go to state 19
    REAL_LITERAL  shift, and go to state 20
    CHAR_LITERAL  shift, and go to state 21
    HEX_LITERAL   shift, and go to state 22
    NEGOP         shift, and go to state 27
    '('           shift, and go to state 28

    expressions  go to state 112
    expression   go to state 113
    term         go to state 32
    primary      go to state 33


State 102

   36 statement: FOLD direction operator list_choice • ENDFOLD

    ENDFOLD  shift, and go to state 114


State 103

   24 list_choice: list •

    $default  reduce using rule 24 (list_choice)


State 104

    9 variable: IDENTIFIER ':' LIST OF type IS • list ';'

    '('  shift, and go to state 101

    list  go to state 115


State 105

    8 variable: IDENTIFIER ':' type IS statement ';' •

    $default  reduce using rule 8 (variable)


State 106

   39 case: CASE • INT_LITERAL ARROW statement ';'
   40     | CASE • REAL_LITERAL ARROW statement ';'

    INT_LITERAL   shift, and go to state 116
    REAL_LITERAL  shift, and go to state 117


State 107

   34 statement: SWITCH expression IS cases OTHERS • ARROW statement ';' ENDSWITCH

    ARROW  shift, and go to state 118


State 108

   37 cases: cases case •

    $default  reduce using rule 37 (cases)


State 109

   47 condition: condition ANDOP NOTOP relation •

    $default  reduce using rule 47 (condition)


State 110

   33 statement: WHEN condition ',' expression ':' • expression

    IDENTIFIER    shift, and go to state 18
    INT_LITERAL   shift, and go to state 19
    REAL_LITERAL  shift, and go to state 20
    CHAR_LITERAL  shift, and go to state 21
    HEX_LITERAL   shift, and go to state 22
    NEGOP         shift, and go to state 27
    '('           shift, and go to state 28

    expression  go to state 119
    term        go to state 32
    primary     go to state 33


State 111

   35 statement: IF condition THEN statement ';' • elsifs ELSE statement ';' ENDIF

    $default  reduce using rule 42 (elsifs)

    elsifs  go to state 120


State 112

   26 list: '(' expressions • ')'
   27 expressions: expressions • ',' expression

    ','  shift, and go to state 121
    ')'  shift, and go to state 122


State 113

   28 expressions: expression •
   53 expression: expression • ADDOP term

    ADDOP  shift, and go to state 57

    $default  reduce using rule 28 (expressions)


State 114

   36 statement: FOLD direction operator list_choice ENDFOLD •

    $default  reduce using rule 36 (statement)


State 115

    9 variable: IDENTIFIER ':' LIST OF type IS list • ';'

    ';'  shift, and go to state 123


State 116

   39 case: CASE INT_LITERAL • ARROW statement ';'

    ARROW  shift, and go to state 124


State 117

   40 case: CASE REAL_LITERAL • ARROW statement ';'

    ARROW  shift, and go to state 125


State 118

   34 statement: SWITCH expression IS cases OTHERS ARROW • statement ';' ENDSWITCH

    IDENTIFIER    shift, and go to state 18
    INT_LITERAL   shift, and go to state 19
    REAL_LITERAL  shift, and go to state 20
    CHAR_LITERAL  shift, and go to state 21
    HEX_LITERAL   shift, and go to state 22
    SWITCH        shift, and go to state 23
    WHEN          shift, and go to state 24
    IF            shift, and go to state 25
    FOLD          shift, and go to state 26
    NEGOP         shift, and go to state 27
    '('           shift, and go to state 28

    statement   go to state 126
    expression  go to state 31
    term        go to state 32
    primary     go to state 33


State 119

   33 statement: WHEN condition ',' expression ':' expression •
   53 expression: expression • ADDOP term

    ADDOP  shift, and go to state 57

    $default  reduce using rule 33 (statement)


State 120

   35 statement: IF condition THEN statement ';' elsifs • ELSE statement ';' ENDIF
   41 elsifs: elsifs • elsif

    ELSE   shift, and go to state 127
    ELSIF  shift, and go to state 128

    elsif  go to state 129


State 121

   27 expressions: expressions ',' • expression

    IDENTIFIER    shift, and go to state 18
    INT_LITERAL   shift, and go to state 19
    REAL_LITERAL  shift, and go to state 20
    CHAR_LITERAL  shift, and go to state 21
    HEX_LITERAL   shift, and go to state 22
    NEGOP         shift, and go to state 27
    '('           shift, and go to state 28

    expression  go to state 130
    term        go to state 32
    primary     go to state 33


State 122

   26 list: '(' expressions ')' •

    $default  reduce using rule 26 (list)


State 123

    9 variable: IDENTIFIER ':' LIST OF type IS list ';' •

    $default  reduce using rule 9 (variable)


State 124

   39 case: CASE INT_LITERAL ARROW • statement ';'

    IDENTIFIER    shift, and go to state 18
    INT_LITERAL   shift, and go to state 19
    REAL_LITERAL  shift, and go to state 20
    CHAR_LITERAL  shift, and go to state 21
    HEX_LITERAL   shift, and go to state 22
    SWITCH        shift, and go to state 23
    WHEN          shift, and go to state 24
    IF            shift, and go to state 25
    FOLD          shift, and go to state 26
    NEGOP         shift, and go to state 27
    '('           shift, and go to state 28

    statement   go to state 131
    expression  go to state 31
    term        go to state 32
    primary     go to state 33


State 125

   40 case: CASE REAL_LITERAL ARROW • statement ';'
